# tech-portfolio

./: .gitignore  readme.md
Apache-Airflow/: 1_introduction.md  2_core_concepts.md  3_workflows.md  readme.md
Apache-Airflow/airflow/: docker-compose-mysql.yaml
Apache-Beam/: Overview.md  learning_path.md  readme.md
Apache-Beam/testing/: 2.test_pipeline.md  readme.md
Apache-Kafka/: docker-compose.yaml
Apache-Spark/: 2_Architecture.md  6_UDFs.md  docker-compose.yaml  readme.md
Apache-Spark/3_RDDs/: 3_RDDs.md  sample.txt  word_count.py
Apache-Spark/Apache-Iceberg/: readme.md
Apache-Spark/SparkSession/: 1_initialize.md  1_introduction.md  2_read_df.md  6_joins.md  8_write_partition.md  9_temp_views.md  readme.md
Continuos-Learning/Docker/: docker-compose_yaml.md
Continuous-Learning/NLP/: introduction.md  pyproject.toml  readme.md
Continuous-Learning/NLP/nltk/: readme.md
Continuous-Learning/Neo4js/: 1_introduction.md  docker-compose.yaml
Data-Engineering/Apache-Airflow/: 2_core_concepts.md  readme.md
DevOps/Jenkins/: README.md  (+3 more)
Docker/: docker-reset.bat  docker_cli.md  readme.md
Docker-Kubernetes/: readme.md
GCP/: disable_apis.bat
GCP/DataFlow/: pyproject.toml  readme.md  requirements_extract.bat
GCP/DataFlow/dataflow_works/: introduction.md
GCP/DataFlow/dataflow_works/topic1/: read_map_write.py  requirements.txt
GCP/DataFlow/dataflow_works/topic2/: transformations.bat  transformations.py
LLMs/: readme.md
NLP/: readme.md
Neo4js/: 2_Cypher_Basics.md  3_Cypher_Intermediate.md  3_Delete_Relationships.md  readme.md
Python/: readme.md
(+106 files in other folders)
